--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Machine Learning in Practice
+tagline: No-nonsense machine learning
 author :
   name : Daoud Clarke
 #  email : blah@email.test
