--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Life, Language, Learning
+title : "Daoud's blog"
 # tagline: No-nonsense machine learning
 author :
   name : Daoud Clarke
