--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : "Daoud's blog"
+title : "Daoud Clarke"
 # tagline: No-nonsense machine learning
 author :
   name : Daoud Clarke
